--- a/Draw/Controller/PrivateChat/ChatDetailController.xib
+++ b/Draw/Controller/PrivateChat/ChatDetailController.xib
@@ -53,6 +53,33 @@
 							<string key="NSResourceName">light_yellow_bg@2x.png</string>
 						</object>
 					</object>
+					<object class="IBUIImageView" id="248950441">
+						<reference key="NSNextResponder" ref="191373211"/>
+						<int key="NSvFlags">292</int>
+						<string key="NSFrameSize">{320, 419}</string>
+						<reference key="NSSuperview" ref="191373211"/>
+						<reference key="NSWindow"/>
+						<string key="NSReuseIdentifierKey">_NS:9</string>
+						<bool key="IBUIUserInteractionEnabled">NO</bool>
+						<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
+						<object class="NSCustomResource" key="IBUIImage">
+							<string key="NSClassName">NSImage</string>
+							<string key="NSResourceName">paper@2x.png</string>
+						</object>
+					</object>
+					<object class="IBUIImageView" id="417381330">
+						<reference key="NSNextResponder" ref="191373211"/>
+						<int key="NSvFlags">292</int>
+						<string key="NSFrame">{{63, 31}, {194, 40}}</string>
+						<reference key="NSSuperview" ref="191373211"/>
+						<reference key="NSWindow"/>
+						<bool key="IBUIUserInteractionEnabled">NO</bool>
+						<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
+						<object class="NSCustomResource" key="IBUIImage">
+							<string key="NSClassName">NSImage</string>
+							<string key="NSResourceName">paperclip@2x.png</string>
+						</object>
+					</object>
 					<object class="IBUIImageView" id="479382471">
 						<reference key="NSNextResponder" ref="191373211"/>
 						<int key="NSvFlags">292</int>
@@ -143,7 +170,7 @@
 					<object class="IBUITableView" id="619305645">
 						<reference key="NSNextResponder" ref="191373211"/>
 						<int key="NSvFlags">274</int>
-						<string key="NSFrame">{{0, 50}, {320, 372}}</string>
+						<string key="NSFrame">{{10, 72}, {300, 332}}</string>
 						<reference key="NSSuperview" ref="191373211"/>
 						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="1067621707"/>
@@ -153,7 +180,7 @@
 						<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
 						<bool key="IBUIAlwaysBounceVertical">YES</bool>
 						<int key="IBUISeparatorStyle">1</int>
-						<object class="NSColor" key="IBUISeparatorColor">
+						<object class="NSColor" key="IBUISeparatorColor" id="926914683">
 							<int key="NSColorSpace">3</int>
 							<bytes key="NSWhite">MCAwAA</bytes>
 						</object>
@@ -170,7 +197,7 @@
 							<object class="IBUIButton" id="922341360">
 								<reference key="NSNextResponder" ref="1067621707"/>
 								<int key="NSvFlags">292</int>
-								<string key="NSFrame">{{203, 4}, {56, 30}}</string>
+								<string key="NSFrame">{{196, 4}, {56, 30}}</string>
 								<reference key="NSSuperview" ref="1067621707"/>
 								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="193685694"/>
@@ -200,7 +227,7 @@
 							<object class="IBUIButton" id="193685694">
 								<reference key="NSNextResponder" ref="1067621707"/>
 								<int key="NSvFlags">292</int>
-								<string key="NSFrame">{{262, 4}, {56, 30}}</string>
+								<string key="NSFrame">{{256, 4}, {56, 30}}</string>
 								<reference key="NSSuperview" ref="1067621707"/>
 								<reference key="NSWindow"/>
 								<string key="NSReuseIdentifierKey">_NS:9</string>
@@ -219,18 +246,26 @@
 								<reference key="IBUIFontDescription" ref="455006812"/>
 								<reference key="IBUIFont" ref="89984544"/>
 							</object>
+							<object class="IBUIImageView" id="909249463">
+								<reference key="NSNextResponder" ref="1067621707"/>
+								<int key="NSvFlags">292</int>
+								<string key="NSFrame">{{4, 3}, {186, 32}}</string>
+								<reference key="NSSuperview" ref="1067621707"/>
+								<reference key="NSWindow"/>
+								<reference key="NSNextKeyView" ref="888685865"/>
+								<string key="NSReuseIdentifierKey">_NS:9</string>
+								<bool key="IBUIUserInteractionEnabled">NO</bool>
+								<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
+							</object>
 							<object class="IBUITextView" id="888685865">
 								<reference key="NSNextResponder" ref="1067621707"/>
 								<int key="NSvFlags">292</int>
-								<string key="NSFrame">{{4, 3}, {195, 32}}</string>
+								<string key="NSFrame">{{4, 3}, {186, 32}}</string>
 								<reference key="NSSuperview" ref="1067621707"/>
 								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="922341360"/>
 								<string key="NSReuseIdentifierKey">_NS:9</string>
-								<object class="NSColor" key="IBUIBackgroundColor">
-									<int key="NSColorSpace">1</int>
-									<bytes key="NSRGB">MSAxIDEAA</bytes>
-								</object>
+								<reference key="IBUIBackgroundColor" ref="926914683"/>
 								<bool key="IBUIClipsSubviews">YES</bool>
 								<bool key="IBUIMultipleTouchEnabled">YES</bool>
 								<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
@@ -250,15 +285,12 @@
 								</object>
 							</object>
 						</array>
-						<string key="NSFrame">{{0, 422}, {320, 38}}</string>
+						<string key="NSFrame">{{0, 420}, {320, 40}}</string>
 						<reference key="NSSuperview" ref="191373211"/>
 						<reference key="NSWindow"/>
-						<reference key="NSNextKeyView" ref="888685865"/>
+						<reference key="NSNextKeyView" ref="909249463"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
-						<object class="NSColor" key="IBUIBackgroundColor">
-							<int key="NSColorSpace">3</int>
-							<bytes key="NSWhite">MC4wOTk0MjQwNDE5NwA</bytes>
-						</object>
+						<reference key="IBUIBackgroundColor" ref="926914683"/>
 						<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
 					</object>
 				</array>
@@ -334,6 +366,22 @@
 					<int key="connectionID">33</int>
 				</object>
 				<object class="IBConnectionRecord">
+					<object class="IBCocoaTouchOutletConnection" key="connection">
+						<string key="label">inputTextBackgroundImage</string>
+						<reference key="source" ref="372490531"/>
+						<reference key="destination" ref="909249463"/>
+					</object>
+					<int key="connectionID">35</int>
+				</object>
+				<object class="IBConnectionRecord">
+					<object class="IBCocoaTouchOutletConnection" key="connection">
+						<string key="label">paperImageView</string>
+						<reference key="source" ref="372490531"/>
+						<reference key="destination" ref="248950441"/>
+					</object>
+					<int key="connectionID">38</int>
+				</object>
+				<object class="IBConnectionRecord">
 					<object class="IBCocoaTouchEventConnection" key="connection">
 						<string key="label">clickBack:</string>
 						<reference key="source" ref="436685931"/>
@@ -401,8 +449,10 @@
 							<reference ref="479382471"/>
 							<reference ref="436685931"/>
 							<reference ref="277773246"/>
-							<reference ref="619305645"/>
 							<reference ref="1067621707"/>
+							<reference ref="248950441"/>
+							<reference ref="619305645"/>
+							<reference ref="417381330"/>
 						</array>
 						<reference key="parent" ref="0"/>
 					</object>
@@ -439,6 +489,7 @@
 							<reference ref="193685694"/>
 							<reference ref="922341360"/>
 							<reference ref="888685865"/>
+							<reference ref="909249463"/>
 						</array>
 						<reference key="parent" ref="191373211"/>
 					</object>
@@ -467,6 +518,21 @@
 						<reference key="object" ref="888685865"/>
 						<reference key="parent" ref="1067621707"/>
 					</object>
+					<object class="IBObjectRecord">
+						<int key="objectID">34</int>
+						<reference key="object" ref="909249463"/>
+						<reference key="parent" ref="1067621707"/>
+					</object>
+					<object class="IBObjectRecord">
+						<int key="objectID">36</int>
+						<reference key="object" ref="248950441"/>
+						<reference key="parent" ref="191373211"/>
+					</object>
+					<object class="IBObjectRecord">
+						<int key="objectID">37</int>
+						<reference key="object" ref="417381330"/>
+						<reference key="parent" ref="191373211"/>
+					</object>
 				</array>
 			</object>
 			<dictionary class="NSMutableDictionary" key="flattenedProperties">
@@ -480,6 +546,9 @@
 				<string key="18.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 				<string key="22.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 				<string key="30.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
+				<string key="34.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
+				<string key="36.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
+				<string key="37.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 				<string key="4.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 				<string key="5.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 				<string key="6.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
@@ -489,7 +558,7 @@
 			<nil key="activeLocalization"/>
 			<dictionary class="NSMutableDictionary" key="localizations"/>
 			<nil key="sourceID"/>
-			<int key="maxID">33</int>
+			<int key="maxID">38</int>
 		</object>
 		<object class="IBClassDescriber" key="IBDocument.Classes">
 			<array class="NSMutableArray" key="referencedPartialClassDescriptions">
@@ -510,7 +579,9 @@
 					<dictionary class="NSMutableDictionary" key="outlets">
 						<string key="graffitiButton">UIButton</string>
 						<string key="inputBackgroundView">UIView</string>
+						<string key="inputTextBackgroundImage">UIImageView</string>
 						<string key="inputTextView">UITextView</string>
+						<string key="paperImageView">UIImageView</string>
 						<string key="sendButton">UIButton</string>
 						<string key="titleLabel">UILabel</string>
 					</dictionary>
@@ -523,9 +594,17 @@
 							<string key="name">inputBackgroundView</string>
 							<string key="candidateClassName">UIView</string>
 						</object>
+						<object class="IBToOneOutletInfo" key="inputTextBackgroundImage">
+							<string key="name">inputTextBackgroundImage</string>
+							<string key="candidateClassName">UIImageView</string>
+						</object>
 						<object class="IBToOneOutletInfo" key="inputTextView">
 							<string key="name">inputTextView</string>
 							<string key="candidateClassName">UITextView</string>
+						</object>
+						<object class="IBToOneOutletInfo" key="paperImageView">
+							<string key="name">paperImageView</string>
+							<string key="candidateClassName">UIImageView</string>
 						</object>
 						<object class="IBToOneOutletInfo" key="sendButton">
 							<string key="name">sendButton</string>
@@ -581,6 +660,8 @@
 		<dictionary class="NSMutableDictionary" key="IBDocument.LastKnownImageSizes">
 			<string key="back@2x.png">{74, 74}</string>
 			<string key="light_yellow_bg@2x.png">{640, 960}</string>
+			<string key="paper@2x.png">{640, 960}</string>
+			<string key="paperclip@2x.png">{388, 79}</string>
 			<string key="topwood@2x.png">{640, 99}</string>
 		</dictionary>
 		<string key="IBCocoaTouchPluginVersion">1179</string>
